--- a/matrix/templates/server-deploy.yaml
+++ b/matrix/templates/server-deploy.yaml
@@ -24,3 +24,7 @@ spec:
           ports:
           - containerPort: {{ .Values.server.service.port }}
             protocol: TCP
+          envFrom:
+            {{- with .Values.server.envFrom }}
+            {{- toYaml . | nindent 12}}
+            {{- end }}
