--- a/matrix/templates/mongo-service.yaml
+++ b/matrix/templates/mongo-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "mongo-service"
+  name: "mongo-servicee"
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "matrix.labels-mongo" . | nindent 4 }}
