--- a/matrix/values.yaml
+++ b/matrix/values.yaml
@@ -66,7 +66,7 @@ mongo:
   - name: mongo-pvc
     mountPath: "/data/db"
   volumeClaimTemplates:
-  - metdata:
+  - metadata:
       name: mongo-pvc
     spec: 
       accessModes: 
