--- a/flask-client/package.json
+++ b/flask-client/package.json
@@ -33,6 +33,9 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^16.0.1"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "axios-mock-adapter": "^2.1.0"
   }
 }
