--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,8 +79,7 @@ jobs:
 
     # Build both images using matrix.
     - name: Build the client image
-      working-directory: ${{ matrix.folder }}
-      run: docker build . --file Dockerfile --tag shalevbeli/${{ matrix.image }}:{{ steps.meta.outputs.tags }}
+      run: docker build . --file ${{ matrix.folder }}/Dockerfile --tag shalevbeli/${{ matrix.image }}:{{ steps.meta.outputs.tags }}
 
     - name: Login to docker hub
       uses: docker/login-action@v3.3.0
