--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,7 +79,8 @@ jobs:
 
     # Build both images using matrix.
     - name: Build the client image
-      run: docker build . --file "${{ matrix.folder }}/Dockerfile" --tag shalevbeli/${{ matrix.image }}:${{ steps.meta.outputs.tags }}
+      working-directory: ${{ matrix.folder }}
+      run: docker build . --file Dockerfile --tag shalevbeli/${{ matrix.image }}:${{ steps.meta.outputs.tags }}
 
     - name: Login to docker hub
       uses: docker/login-action@v3.3.0
