--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,6 +77,18 @@ jobs:
     - name: Check out files
       uses: actions/checkout@v4
 
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        # list of Docker images to use as base name for tags
+        images: |
+          shalevbeli/${{ matrix.image }}         
+        # generate Docker tags based on the following events/attributes
+        tags: |
+          type=semver,pattern={{major}}.{{minor}}
+    
+
     # Build both images using matrix.
     - name: Build the client image
       working-directory: ${{ matrix.folder }}
