--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,7 +78,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Docker meta
-      id: meta
+      id: docker-meta
       uses: docker/metadata-action@v5
       with:
         # list of Docker images to use as base name for tags
@@ -92,7 +92,7 @@ jobs:
     # Build both images using matrix.
     - name: Build the client image
       working-directory: ${{ matrix.folder }}
-      run: docker build . --file Dockerfile --tag shalevbeli/${{ matrix.image }}:${{ steps.meta.outputs.tags }}
+      run: docker build . --file Dockerfile --tag shalevbeli/${{ matrix.image }}:${{ steps.docker-meta.outputs.tags }}
 
     - name: Login to docker hub
       uses: docker/login-action@v3.3.0
