--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,7 +62,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: tests
+    #needs: tests
     strategy:
       matrix:
         folder: ["./flask-client", "./Server"]
