--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,11 +77,22 @@ jobs:
     - name: Check out files
       uses: actions/checkout@v4
 
-    - name: Extract metadata (tags, labels) for Docker
+    - name: Docker meta
       id: meta
-      uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+      uses: docker/metadata-action@v5
       with:
-        images: "shalevbeli/${{ matrix.image }}"
+        # list of Docker images to use as base name for tags
+        images: |
+          shalevbeli/${{ matrix.image }}        
+        # generate Docker tags based on the following events/attributes
+        tags: |
+          type=schedule
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=semver,pattern={{major}}
+          type=sha   
     
 
     # Build both images using matrix.
