--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,65 +4,65 @@ on:
     branches: [ "main" ]
     
 jobs:
-  # tests:
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     REACT_APP_SERVER_URL: ${{ secrets.REACT_APP_SERVER_URL }}
-  #     MONGODB_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
-  #     MONGODB_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
-  #     MONGODB_HOST: "localhost"
+  tests:
+    runs-on: ubuntu-latest
+    env:
+      REACT_APP_SERVER_URL: ${{ secrets.REACT_APP_SERVER_URL }}
+      MONGODB_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
+      MONGODB_HOST: "localhost"
 
-  #   services:
-  #     mongo:
-  #       image: mongo:latest
-  #       ports:
-  #         - 27017:27017
-  #       env:
-  #         MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
-  #         MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
+    services:
+      mongo:
+        image: mongo:latest
+        ports:
+          - 27017:27017
+        env:
+          MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
+          MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
 
 
-  #   steps:
-  #   # Server Tests
-  #   - name: Check out files
-  #     uses: actions/checkout@v4
+    steps:
+    # Server Tests
+    - name: Check out files
+      uses: actions/checkout@v4
 
-  #   - name: Set up Python
-  #     uses: actions/setup-python@v2
-  #     with:
-  #       python-version: '3.9.20'
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9.20'
 
-  #   - name: Install Server Dependencies
-  #     working-directory: ./Server
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #       pip install -r requirements.txt
+    - name: Install Server Dependencies
+      working-directory: ./Server
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-  #   - name: Run Flask server
-  #     working-directory: ./Server
-  #     run: python -m flask run --host=0.0.0.0 & # Run Flask app in the background
+    - name: Run Flask server
+      working-directory: ./Server
+      run: python -m flask run --host=0.0.0.0 & # Run Flask app in the background
 
-  #   - name: Run Server Tests
-  #     working-directory: ./Server
-  #     run: pytest 
+    - name: Run Server Tests
+      working-directory: ./Server
+      run: pytest 
 
-  #   # Client Tests                  
-  #   - name: Setup Node.js environment          
-  #     uses: actions/setup-node@v4.1.0
-  #     with: 
-  #       node-version: 20
+    # Client Tests                  
+    - name: Setup Node.js environment          
+      uses: actions/setup-node@v4.1.0
+      with: 
+        node-version: 20
     
-  #   - name: Install Dependencies
-  #     working-directory: ./flask-client
-  #     run: npm install
+    - name: Install Dependencies
+      working-directory: ./flask-client
+      run: npm install
 
-  #   - name: Run Tests
-  #     working-directory: ./flask-client
-  #     run: npm test 
+    - name: Run Tests
+      working-directory: ./flask-client
+      run: npm test 
 
   build:
     runs-on: ubuntu-latest
-    #needs: tests
+    needs: tests
     strategy:
       matrix:
         folder: ["./flask-client", "./Server"]
@@ -75,36 +75,24 @@ jobs:
         
     steps: 
     - name: Check out files
-      uses: actions/checkout@v4
-
-    - name: Docker meta
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        # list of Docker images to use as base name for tags
-        images: |
-          shalevbeli/${{ matrix.image }}        
-        # generate Docker tags based on the following events/attributes
-        tags: |
-          type=schedule
-          type=ref,event=branch
-          type=ref,event=pr
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=semver,pattern={{major}}
-          type=sha   
-    
+      uses: actions/checkout@v4    
 
     # Build both images using matrix.
     - name: Build the client image
       working-directory: ${{ matrix.folder }}
-      run: docker build . --file Dockerfile --tag shalevbeli/${{ matrix.image }}:${{ steps.docker-meta.outputs.tags }}
+      run: docker build . --file Dockerfile --tag shalevbeli/${{ matrix.image }}:${{ github.run_number }}
 
     - name: Login to docker hub
       uses: docker/login-action@v3.3.0
       with: 
         username: shalevbeli
         password: ${{ secrets.DOCKER_PASS }}
+
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+      with:
+        images: "shalevbeli/${{ matrix.image }}"
     
     - name: Pushing the image to the repository
       uses: docker/build-push-action@v6.7.0 
