--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,9 +68,9 @@ jobs:
         folder: ["./flask-client", "./Server"]
         image: ["client", "server"]
         exclude:
-          - folder: ./flask-client
+          - folder: flask-client
             image: server
-          - folder: ./Server
+          - folder: Server
             image: client
         
     steps: 
@@ -79,8 +79,9 @@ jobs:
 
     # Build both images using matrix.
     - name: Build the client image
-      working-directory: ${{ matrix.folder }}
-      run: docker build . --file Dockerfile --tag shalevbeli/${{ matrix.image }}:${{ github.run_number }}
+      run: |
+        cd ${{ matrix.folder }}
+        docker build . --file Dockerfile --tag shalevbeli/${{ matrix.image }}:${{ github.run_number }}
 
     - name: Login to docker hub
       uses: docker/login-action@v3.3.0
