--- a/flask-client/Dockerfile
+++ b/flask-client/Dockerfile
@@ -5,13 +5,13 @@ FROM node:20 AS build
 WORKDIR /app
 
 # Copy package.json and package-lock.json to install dependencies
-COPY package*.json ./
+COPY flask-client/package*.json ./
 
 # Install dependencies
 RUN npm install
 
 # Copy the rest of the application files
-COPY . .
+COPY flask-client/ .
 
 # Build the React application
 RUN npm run build
