Added both versioning and latest tags

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -101,7 +101,8 @@ jobs:
         context: ./${{ matrix.folder }}
         file: ./${{ matrix.folder }}/Dockerfile
         push: true
-        tags: ${{ github.run_number }}, main
+        tags: |
+         "${{ github.run_number }}.0", "latest"
         labels: ${{ steps.meta.outputs.labels }}
 
       
