--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -102,7 +102,8 @@ jobs:
         file: ./${{ matrix.folder }}/Dockerfile
         push: true
         tags: |
-         "${{ github.run_number }}.0", "latest"
+          ${{ github.run_number }}.0
+          latest
         labels: ${{ steps.meta.outputs.labels }}
 
       
