--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,8 @@ name: Docker CI
 on:
   push:
     branches: [ "main" ]
+    tags:
+      - 'v*.*.*'
     
 jobs:
   tests:
@@ -75,7 +77,7 @@ jobs:
         
     steps: 
     - name: Check out files
-      uses: actions/checkout@v4    
+      uses: actions/checkout@v4 
 
     # Build both images using matrix.
     - name: Build the client image
@@ -101,7 +103,7 @@ jobs:
         context: ./${{ matrix.folder }}
         file: ./${{ matrix.folder }}/Dockerfile
         push: true
-        tags: shalevbeli/${{ matrix.image }}:latest , shalevbeli/${{ matrix.image }}:${{ github.run_number }}.0
+        tags: shalevbeli/${{ matrix.image }}:latest , shalevbeli/${{ matrix.image }}:${{ github.ref_name }}
         labels: ${{ steps.meta.outputs.labels }}
 
       
